# stextools

./: .flake8  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  experiment.py  mypy.ini  pyproject.toml
doc/: example2.tex  sysdesc.tex
doc/aligments2025/: .gitignore  doc.tex  references.bib
doc/cicm25-paper/: otherrefs.bib  paper.tex  rebuttal.txt  reviews.txt  search-problem.en.tex
doc/cicm25-sysdesc/: .sysdesc.tex.swp  deleted.tex  snifystat.py  sysdesc.tex  tikzlibrarydocicon.code.tex
doc/img/: minimax-remarks.tex
scripts/: .anno-choice-stats.py.swp  .annocountplot.py.swp  anno-choice-stats.py  annocounthistory.py  annocounthistory2.py  annocountplot.py  author-stats.py  create-stex-test-meta-data.py  exam-meta.py  symbolstats.py
stextools/: __init__.py  __main__.py  cache.py  catalog_export.py  config.py  cycle_finder.py  defianno.py  dependency_check.py  dependency_graph.py  dependency_update.py  linked_str.py  macro_arg_utils.py  macros.py  manifest.py  mathhub.py  pythonapi.py  remote_repositories.py  srify.py  srify_old.py  stexdoc.py  stexmmtquery.py  symbol_search.py  symnamer.py  translation.py  tree_regex.py  ui.py
stextools/aligner/: aligner.py  omp2.py
stextools/core/: cache.py  config.py  design.md  linker.py  macros.py  mathhub.py  simple_api.py  stexdoc.py
stextools/lexicon/: README.md  lexgen.py  lexgen_commands.py  lexgenstate.py  lexgenstepper.py  ud.py  wordlex.py
stextools/snify/: README.md  annotate.py  annotate_command.py  annotype.py  catalog.py  commands.py  controller.py  displaysupport.py  endeavour.py  local_stex_catalog.py  math_catalog.py  new_snify.py  new_snify_state.py  selection.py  session_storage.py  skip_and_ignore.py  snify.py  snify_commands.py  snify_state.py  snify_stepper.py  snifystate.py  snifystepper.py  state.py  stemming.py  stex_dependency_addition.py  wikidata.py
stextools/srify/: annotate_command.py  (+7 more)
(+60 files in other folders)
