[project]
name = "stextools"
version = "0.0.1"
authors = [
    { name="Jan Frederik Schaefer" },
]
description = "sTeX tooling"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pylatexenc >= 2.10",
    "click >= 8.1",
    "nltk",
    # the following are only needed for some commands,
    # but they should be sufficiently lightweight to always be installed
    "pygments",
    "python-gitlab"
]


# setuptools doesn't support PEP 660
# [build-system]
# requires = ["setuptools>=62.6"]
# build-backend = "setuptools.build_meta"

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"
