[project]
name = "stextools"
version = "0.3.1"
authors = [
    { name="Jan Frederik Schaefer" },
]
description = "sTeX tooling"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pylatexenc >= 3.0a33",
    "click >= 8.1",
    "nltk",
    # the following are only needed for some commands,
    # but they should be sufficiently lightweight to always be installed
    "pygments",
    "python-gitlab"
]

[project.scripts]
stextools = "stextools.__main__:cli"

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"
